--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Maksym Karashevskyi</title>
-    <link rel="stylesheet" href="./styles/main.scss" />
+    <link rel="stylesheet" href="./styles/index.scss" />
     <script src="scripts/main.js" defer></script>
     <link rel="icon" href="favicon.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
       </div>
 
       <div class="cat">
-        <img src="/img/cute_cat_no_pupils.png" alt="Cute cat">
+        <img src="/img/cute_cat_no_eyes.png" alt="">
         <div class="eyes">
           <div class="eye">
             <div class="pupil"></div>
@@ -41,10 +41,10 @@
             <h2 data-en="Programming education" data-fr="Formation en programmation" data-ua="Програмування">Programming education</h2>
             <h4 data-en="APR 2023 - DEC 2024" data-fr="AVR 2023 - DÉC 2024" data-ua="КВІ 2023 - ГРУ 2024">APR 2023 - DEC 2024</h4>
             <h3>
-              <span class="popup-text" data-en="I finished the course, completing the themes: JS, TS, HTML, CSS, SCSS, working with Git, DOM, React, Redux, Vue, Angular, SQL, Docker, Data structures and SOLID principles, SCRUM methodology and working with JIRA"
-                    data-fr="J'ai terminé le cours, en complétant les thèmes : JS, TS, HTML, CSS, SCSS, travail avec Git, DOM, React, Redux, Vue, Angular, SQL, Docker, structures de données et principes SOLID, méthodologie SCRUM et travail avec JIRA"
-                    data-ua="Я завершив курс, вивчаючи теми: JS, TS, HTML, CSS, SCSS, робота з Git, DOM, React, Redux, Vue, Angular, SQL, Docker, структури даних та принципи SOLID, методологія SCRUM та робота з JIRA">
-                I finished the course, completing the themes: JS, TS, HTML, CSS, SCSS, working with Git, DOM, React, Redux, Vue, Angular, SQL, Docker, Data structures and SOLID principles, SCRUM methodology and working with JIRA
+              <span class="popup-text" data-en="I finished the course, completing the themes: JS, TS, HTML, CSS, SCSS, working with Git, DOM, React, Redux, Vue, Angular, SQL, Node.js, Docker, Data structures and SOLID principles, SCRUM methodology and working with JIRA"
+                    data-fr="J'ai terminé le cours, en complétant les thèmes : JS, TS, HTML, CSS, SCSS, travail avec Git, DOM, React, Redux, Vue, Angular, SQL, Node.js, Docker, structures de données et principes SOLID, méthodologie SCRUM et travail avec JIRA"
+                    data-ua="Я завершив курс, вивчаючи теми: JS, TS, HTML, CSS, SCSS, робота з Git, DOM, React, Redux, Vue, Angular, SQL, Node.js, Docker, структури даних та принципи SOLID, методологія SCRUM та робота з JIRA">
+                I finished the course, completing the themes: JS, TS, HTML, CSS, SCSS, working with Git, DOM, React, Redux, Vue, Angular, SQL, Node.js, Docker, Data structures and SOLID principles, SCRUM methodology and working with JIRA
               </span>
               <a class="content__link" href="https://mate.academy/en/courses/fullstack" data-en="-MateAcademy, FullStack" data-fr="-MateAcademy, FullStack" data-ua="-MateAcademy, FullStack">-MateAcademy, FullStack</a>
             </h3>
@@ -76,7 +76,7 @@
             <h3>
               <a class="content__link" href="https://if.isuo.org/schools/view/id/10935" data-en="Primary and secondary school in Sopiv" data-fr="École primaire et secondaire à Sopiv" data-ua="Початкова та середня школа в Сопові">Primary and secondary school in Sopiv</a>
               <span class="popup-text" data-en="Studied in a small mountain village school in Western Ukraine, but in the 9th year decided to go to the best specialized school in the nearest town."
-                    data-fr="Étudié dans une petite école de village de montagne dans l'ouest de l'Ukraine, mais en 9e année a décidé d'aller à la meilleure école spécialisée de la ville la plus proche."
+                    data-fr="Étudié dans une petite école de village de montagne dans l'ouest de l'Ukraine, mais en 9e année a décidé d'aller à la meilleure école spécialisée de la gros ville la plus proche."
                     data-ua="Навчався у невеликій гірській сільській школі на заході України, але на 9-му році навчання вирішив перейти до найкращої спеціалізованої школи у найближчому місті.">
                 Studied in a small mountain village school in Western Ukraine, but in the 9th year decided to go to the best specialized school in the nearest town.
               </span>
@@ -117,7 +117,7 @@
               <a class="content__link" href="https://if.isuo.org/schools/view/id/10935" data-en="AUK - American University in Kyiv" data-fr="AUK - Université américaine à Kyiv" data-ua="АУК - Американський університет у Києві">AUK - American University in Kyiv</a>
               <span class="popup-text" data-en="With the goal of going to the USA, I enrolled in a branch of Arizona State University in Kyiv, but due to new laws, it became impossible to leave the country."
                     data-fr="Avec l'objectif d'aller aux États-Unis, je me suis inscrit à une branche de l'Université d'État de l'Arizona à Kyiv, mais en raison de nouvelles lois, il est devenu impossible de quitter le pays."
-                    data-ua="З метою поїздки до США я вступив до філії Університету штату Аризона в Києві, але через нові закони стало неможливо виїхати з країни.">
+                    data-ua="З метою переїзду до США я вступив до філії Університету штату Аризона в Києві, але через нові закони стало неможливо виїхати з країни.">
                 With the goal of going to the USA, I enrolled in a branch of Arizona State University in Kyiv, but due to new laws, it became impossible to leave the country.
               </span>
             </h3>
@@ -182,8 +182,9 @@
             <h3 data-en="Barista/English teacher/Small business owner" data-fr="Barista/Professeur d'anglais/Propriétaire d'une petite entreprise" data-ua="Бариста/Викладач англійської/Власник невеликого бізнесу">Barista/English teacher/Small business owner</h3>
           </section>
 
-          <h3 class="about">
-            <a href="ps_portrait.html" 
+          <h3>
+            <a class="content__link" 
+            href="ps_portrait.html" 
             data-en="Psychological portrait" 
             data-fr="Portrait psychologique" 
             data-ua="Психологічний портрет">Psychological portrait</a>
