--- a/src/maksym_karashevskyi.html
+++ b/src/maksym_karashevskyi.html
@@ -144,7 +144,7 @@
               <a class="content__link" href="https://q1w2e3r4t5y6u7i8a.github.io/react_phone-catalog/" data-en="React-based website" data-fr="Site web basé sur React" data-ua="Веб-сайт на React">React-based website</a>
             </h3>
             <h3>
-              <a class="content__link" href="" data-en="Personal financial app" data-fr="Application financière personnelle" data-ua="Особистий фінансовий додаток">Personal financial app</a>
+              <a class="content__link" href="https://dumy-finance-app.vercel.app/" data-en="Personal financial app" data-fr="Application financière personnelle" data-ua="Особистий фінансовий додаток">Personal financial app</a>
               <span class="popup-text" data-en="This is a Saas Platform with Nextjs, React, Honojs with CSV upload."
                     data-fr="C'est une plateforme Saas avec Nextjs, React, Honojs et téléchargement de fichiers CSV."
                     data-ua="Це платформа Saas з Nextjs, React, Honojs і завантаженням CSV.">
