--- a/src/index.html
+++ b/src/index.html
@@ -3,59 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 20px;
-        }
-        .name-link {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            text-decoration: none;
-            margin: 10px;
-            padding: 12px 20px;
-            border: 2px solid #333;
-            border-radius: 25px;
-            transition: all 0.3s ease;
-        }
-        .name-link:hover {
-            background-color: #333;
-            color: #fff;
-            transform: scale(1.1);
-        }
-        .separator {
-            font-size: 28px;
-            color: #777;
-            margin: 0 10px;
-        }
-
-        /* Mobile responsive styles */
-        @media (max-width: 600px) {
-            .name-link {
-                font-size: 20px;
-                padding: 10px 15px;
-            }
-            .separator {
-                font-size: 24px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/index.scss" />
+    <title>CV</title>
+    <script type="module" src="/src/scripts/main.js"></script>
 </head>
 <body>
-    <div class="container">
-        <a href="maksym_karashevskyi.html" class="name-link">Maksym Karashevskyi</a>
-        <a href="natalia_yakymenko.html" class="name-link">Natalia Yakymenko</a>
+    <div class="container" style="max-width: 600px; margin: auto; text-align: center;">
+        <a href="maksym_karashevskyi_developer.html" class="name-link" 
+           style="display: inline-block; margin-bottom: 20px; padding: 12px 20px; background: black; color: white; font-size: 18px; font-weight: bold; text-decoration: none; border-radius: 8px; transition: all 0.3s ease; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);">
+           Maksym Karashevskyi - Developer
+        </a>
+        <br>
+        <a href="maksym_karashevskyi_versetile.html" class="name-link" 
+           style="display: inline-block; margin-bottom: 20px; padding: 12px 20px; background: black; color: white; font-size: 18px; font-weight: bold; text-decoration: none; border-radius: 8px; transition: all 0.3s ease; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);">
+           Maksym Karashevskyi - Versatile
+        </a>
     </div>
+
+    <style>
+        .name-link {
+            display: inline-block;
+            margin-bottom: 20px;
+            padding: 12px 20px;
+            background: black;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .name-link:hover {
+            background-color: white;
+            color: #007BFF; /* Text color changes to blue on hover */
+            transform: translateY(-5px);
+            box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.3);
+        }
+    </style>
 </body>
+
+
+
+
 </html>
