--- a/src/maksym_karashevskyi_versetile.html
+++ b/src/maksym_karashevskyi_versetile.html
@@ -61,7 +61,9 @@
                 MAY 2019 - SEP 2019 / MAY 2020 - SEP 2020
             </h4>
             <h3>
-              <a data-en="Waiter/Bartender at Terrace Bar" 
+              <a class="content__link"
+              href="https://www.google.com/maps/place/Terrace+Bar+Bukovel/data=!4m2!3m1!1s0x0:0x766429649fecea0a?sa=X&ved=1t:2428&ictx=111"
+              data-en="Waiter/Bartender at Terrace Bar" 
               data-fr="Serveur/Barman chez Terrace Bar" 
               data-ua="Офіціант/Бармен у Terrace Bar"
               data-de="Kellner/Barkeeper bei Terrace Bar">
@@ -85,7 +87,9 @@
                 DEC 2020 - JAN 2023
             </h4>
             <h3>
-              <a data-en="Barista at Rivendell" 
+              <a class="content__link"
+              href="https://www.google.com/maps/place/Rivendell+Beauty:+Sofia+(%D0%A0%D1%96%D0%B2%D0%B5%D0%BD%D0%B4%D0%B5%D0%BB%D0%BB,+%D0%A1%D0%BE%D1%84%D1%96%D1%97%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%91%D0%BE%D1%80%D1%89%D0%B0%D0%B3%D1%96%D0%B2%D0%BA%D0%B0)/@50.3988345,30.3835089,17.73z/data=!4m14!1m7!3m6!1s0x40d4cb7e8c14d60f:0x7006719ad729035b!2zUml2ZW5kZWxsIEJlYXV0eTogU29maWEgKNCg0ZbQstC10L3QtNC10LvQuywg0KHQvtGE0ZbRl9Cy0YHRjNC60LAg0JHQvtGA0YnQsNCz0ZbQstC60LAp!8m2!3d50.3987014!4d30.385014!16s%2Fg%2F11frs76b09!3m5!1s0x40d4cb7e8c14d60f:0x7006719ad729035b!8m2!3d50.3987014!4d30.385014!16s%2Fg%2F11frs76b09?entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D"
+              data-en="Barista at Rivendell" 
               data-fr="Barista chez Rivendell" 
               data-ua="Бариста у Rivendell"
               data-de="Barista bei Rivendell">
@@ -110,7 +114,10 @@
                 JAN 2023 - FEB 2024
             </h4>
             <h3> 
-              <a data-en="English Teacher at English Dom" 
+              <a 
+                href="https://www.englishdom.com/en/"
+                class="content__link"
+                data-en="English Teacher at English Dom" 
                 data-fr="Professeur d'anglais chez English Dom" 
                 data-ua="Викладач англійської в English Dom"
                 data-de="Englischlehrer bei English Dom">
