add permit and year

--- a/src/maksym_karashevskyi_developer.html
+++ b/src/maksym_karashevskyi_developer.html
@@ -81,7 +81,9 @@
           </section>
 
           <div class="info">
+            <img class="calendar_icon" src="../img/calendar_icon.png"><h3 data-en="23.04.2001" data-fr="23.04.2001" data-ua="23.04.2001" data-de="23.04.2001">23.04.2001</h3>
             <img class="phone_icon" src="/img/phone_icon.svg"><h3 data-en="+41 78 338 81 35" data-fr="+41 78 338 81 35" data-ua="+41 78 338 81 35" data-de="+41 78 338 81 35">+41 78 338 81 35</h3>
+            <img class="file_icon" src="../img/file_icon.png"><h3 data-en="Valid S work permit" data-fr="Permis de travail S valide" data-ua="Робочий статус С" data-de="Gültige S Arbeitserlaubnis">Valid S work permit</h3>
             <img class="location_icon" src="/img/location_icon.svg"><h3 data-en="Neuchatel 2000, Rue du Seyon 25" data-fr="Neuchatel 2000, Rue du Seyon 25" data-ua="Невшатель 2000, Rue du Seyon 25" data-de="Neuchatel 2000, Rue du Seyon 25">Neuchatel 2000, Rue du Seyon 25</h3>
             <img class="email_icon" src="/img/email_icon.svg"><h3 data-en="maksym.karashevskyi@gmail.com" data-fr="maksym.karashevskyi@gmail.com" data-ua="maksym.karashevskyi@gmail.com" data-de="maksym.karashevskyi@gmail.com">maksym.karashevskyi@gmail.com</h3>
           </div>
