fete du vendange

--- a/src/maksym_karashevskyi_versetile.html
+++ b/src/maksym_karashevskyi_versetile.html
@@ -132,6 +132,29 @@
               <!-- #Toggle button #TODO for mobile
               <span class="toggle__btn">⌵</span>
                 -->
+                <h4 data-en="SEP 2025" 
+                data-fr="SEPT 2025" 
+                data-ua="ВЕР 2025"
+                data-de="SEP 2025">
+                SEP 2025
+            </h4>
+            <h3> 
+              <a 
+                href="https://drive.google.com/file/d/1byENhTeGUCSJ-_Q7EjZbTumXrFAv_QWZ/view?usp=sharing"
+                class="content__link"
+                data-en="Preparation of Fête des Vendanges in Neuchâtel" 
+                data-fr="Préparation de la Fête des Vendanges à Neuchâtel" 
+                data-ua="Підготовка до Фестивалю Виноградарства у Невшателі"
+                data-de="Vorbereitung des Fête des Vendanges in Neuenburg">
+                Preparation of Fête des Vendanges in Neuchâtel
+              </a>
+              <span class="popup-text" data-en="Assisting in the organization and preparation of the annual wine festival" 
+                data-fr="Aide à l’organisation et à la préparation du festival annuel du vin" 
+                data-ua="Допомога в організації та підготовці щорічного фестивалю вина"
+                data-de="Unterstützung bei der Organisation und Vorbereitung des jährlichen Weinfestes">
+                Assisting in the organization and preparation of the annual wine festival
+              </span>
+            </h3>
             </h3>
         </section>
         
